tests/ui/unsized/unsized7.stderr
error[E0277]: the size for values of type `X` cannot be known at compilation time
  --> $DIR/unsized7.rs:12:21
   |
LL | impl<X: ?Sized + T> T1<X> for S3<X> {
   |      -              ^^^^^ doesn't have a size known at compile-time
   |      |
   |      this type parameter needs to be `Sized`
   |
note: required by a bound in `T1`
  --> $DIR/unsized7.rs:7:10
   |
LL | trait T1<Z: T> {
   |          ^ required by this bound in `T1`
help: consider removing the `?Sized` bound to make the type parameter `Sized`
   |
LL - impl<X: ?Sized + T> T1<X> for S3<X> {
LL + impl<X: T> T1<X> for S3<X> {
   |
help: consider relaxing the implicit `Sized` restriction
   |
LL | trait T1<Z: T + ?Sized> {
   |               ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
